# Logistic-Regression-Framework

./: .gitignore  CMakeLists.txt  README.md  cli.py  logistic_regression.py  requirements.txt  temp.py
data/csv/: cleak_300k.py  scaled_data.csv  test_set.csv  train_set.csv
data/json/: new_weights.json  scaled_weights.json
python/bindings/: __init__.py  cli.py  logistic_regression.py  sample.py
src/: LogitClassifier.cc  LogitClassifier.h  Optimizer.cc  Optimizer.h  Types.h  bindings.cc  bs_cleaning.py  compile.sh  generator.py  logistic_regression.cc  logistic_regression.h  model.cc  model.h  omp_compile.sh  omp_test.sh  test.cc  test.sh  test_inference.cc  test_inference.sh  test_inference_large.cc  test_new.cc
